# generalized_VO

./: CMakeLists.txt  package.xml
include/: GVO.h
script/: generalized_velocity_obstacle.py
src/: GVO.cpp  gvo_node.cpp
